examples/cpp/failing/positional_argument_in_initializer_list/Base.c
my_struct_t instance = {
    "hello"
};
